--- a/cases/ev-demand.html
+++ b/cases/ev-demand.html
@@ -1,179 +1,143 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>EV Demand Case Study – Germany</title>
+<meta charset="UTF-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>EV Demand Forecast – Germany | Batuhan Dogan Portfolio</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <style>
-  body { font-family: sans-serif; background-color: #f8fafc; }
-  .kpi-number { font-variant-numeric: tabular-nums; }
-  .kpi-card { transition: transform 0.3s; cursor: default; }
-  .kpi-card:hover { transform: scale(1.05); }
-  a.data-link { text-decoration: underline; color: #059669; font-weight: 600; }
-  a.data-link:hover { color: #065f46; }
-  header a.portfolio-link { position: absolute; top: 1rem; right: 1rem; font-weight: bold; color: #374151; }
-  header a.portfolio-link:hover { color: #059669; }
+  .kpi { font-size: 2rem; font-weight: bold; color: #16a34a; }
+  .kpi-label { font-size: 1rem; color: #374151; }
+  .hover-link { color:#2563eb; text-decoration:underline; }
 </style>
 </head>
-<body>
 
-<header class="max-w-6xl mx-auto px-6 py-10 relative text-center">
-  <h1 class="text-4xl font-black mb-4">EV Demand Forecast – Germany</h1>
-  <a href="../index.html" class="portfolio-link">← Back to Portfolio</a>
-  <p class="text-slate-600 max-w-3xl mx-auto text-lg">
-    Germany’s electric vehicle adoption is rising rapidly, creating regional imbalances in inventory. Some regions experienced stock surpluses, while others faced shortages, increasing operational costs and slowing delivery times. Using historical sales and registration data, we analyzed and optimized inventory allocation, improved forecast accuracy, and enabled faster data-driven decisions.
+<body class="bg-slate-50 text-slate-900">
+
+<!-- HEADER -->
+<header class="pt-20 max-w-6xl mx-auto px-6 mb-20 text-center">
+  <h1 class="text-5xl font-extrabold mb-4">EV Demand Forecast – Germany</h1>
+  <p class="text-xl text-slate-600 max-w-3xl mx-auto">
+    With the rapid rise of electric vehicle adoption, regional disparities in inventory caused overstock in some cities and shortages in others. 
+    Using historical sales & registration data, we optimized inventory allocation and improved forecast accuracy.
   </p>
+  <div class="mt-6 space-y-2">
+    <p class="text-slate-500 text-sm">
+      <span class="font-semibold">Data sources:</span> 
+      <a href="https://example.com/historical-ev-sales.csv" target="_blank" class="hover-link">Historical EV sales & listings (downloaded CSV)</a>,
+      <a href="https://example.com/zsw-ev-data.csv" target="_blank" class="hover-link">ZSW Electromobility – Regional registrations (CSV)</a>
+    </p>
+  </div>
 </header>
 
-<main class="max-w-6xl mx-auto px-6 space-y-12">
+<!-- KPI CARDS -->
+<section class="max-w-6xl mx-auto px-6 mb-20 grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
+  <div class="bg-white p-6 rounded-3xl shadow">
+    <p class="kpi" id="invReduction">0</p>
+    <p class="kpi-label">Inventory Reduction</p>
+  </div>
+  <div class="bg-white p-6 rounded-3xl shadow">
+    <p class="kpi" id="forecastError">0</p>
+    <p class="kpi-label">Forecast Error Improvement</p>
+  </div>
+  <div class="bg-white p-6 rounded-3xl shadow">
+    <p class="kpi" id="decisionSpeed">0</p>
+    <p class="kpi-label">Decision Speed Increase</p>
+  </div>
+</section>
 
-  <!-- Problem -->
-  <section class="bg-white p-6 rounded-2xl shadow-lg">
-    <h2 class="text-2xl font-bold mb-4">Problem</h2>
-    <p>
-      For example, Hamburg had 20 vehicles in stock while demand was 50, causing extra logistics cost. Munich faced shortages as demand exceeded supply. Forecasting errors caused slow replenishment and operational inefficiencies.
-    </p>
-  </section>
+<!-- LINE CHART: Forecast vs Actual -->
+<section class="max-w-6xl mx-auto px-6 mb-20">
+  <h2 class="text-3xl font-bold mb-6 text-center">Forecast vs Actual Demand (Monthly)</h2>
+  <canvas id="forecastChart" class="shadow rounded-3xl bg-white p-4"></canvas>
+</section>
 
-  <!-- Approach -->
-  <section class="bg-white p-6 rounded-2xl shadow-lg">
-    <h2 class="text-2xl font-bold mb-4">Approach</h2>
-    <ul class="list-disc list-inside space-y-2">
-      <li>Collected 2.3M rows of historical sales and registration data.</li>
-      <li>Cleaned and normalized datasets in SQL (removed duplicates, null handling).</li>
-      <li>Analyzed regional demand patterns using Python and Power BI dashboards.</li>
-      <li>Simulated inventory allocation per region to minimize overstock and shortages.</li>
-    </ul>
-  </section>
+<!-- BAR CHART: Regional Inventory Before/After -->
+<section class="max-w-6xl mx-auto px-6 mb-20">
+  <h2 class="text-3xl font-bold mb-6 text-center">Regional Inventory – Before & After Optimization</h2>
+  <canvas id="regionalChart" class="shadow rounded-3xl bg-white p-4"></canvas>
+</section>
 
-  <!-- Recommendation -->
-  <section class="bg-white p-6 rounded-2xl shadow-lg">
-    <h2 class="text-2xl font-bold mb-4">Recommendation</h2>
-    <p>
-      Implement region-specific inventory dashboards with weekly updates. Optimize stock allocation using forecast model outputs to reduce costs, improve delivery times, and increase operational efficiency.
-    </p>
-  </section>
+<!-- Recommendations -->
+<section class="max-w-6xl mx-auto px-6 mb-20 bg-white p-10 rounded-3xl shadow">
+  <h2 class="text-3xl font-bold mb-6">Recommendations & Implementation</h2>
+  <ul class="list-disc list-inside text-slate-700 space-y-3">
+    <li>Implement region-wise inventory allocation dashboards with weekly SQL updates for operations.</li>
+    <li>Prioritize high-demand cities while reducing overstock in low-demand areas.</li>
+    <li>Integrate Power BI interactive dashboards for scenario simulations and trend monitoring.</li>
+    <li>Regularly update forecasts with historical sales & registration data to reduce forecast error.</li>
+  </ul>
+</section>
 
-  <!-- Results -->
-  <section class="bg-white p-6 rounded-2xl shadow-lg space-y-6">
-    <h2 class="text-2xl font-bold mb-4">Results / KPIs</h2>
+<!-- RESULTS -->
+<section class="max-w-6xl mx-auto px-6 mb-20 grid md:grid-cols-3 gap-8 text-center">
+  <div class="bg-white p-6 rounded-3xl shadow">
+    <p class="kpi">−7%</p>
+    <p class="kpi-label">Overall Inventory Reduction</p>
+  </div>
+  <div class="bg-white p-6 rounded-3xl shadow">
+    <p class="kpi">−22%</p>
+    <p class="kpi-label">Forecast Error Improvement</p>
+  </div>
+  <div class="bg-white p-6 rounded-3xl shadow">
+    <p class="kpi">+15%</p>
+    <p class="kpi-label">Decision Speed Increase</p>
+  </div>
+</section>
 
-    <!-- KPI Cards -->
-    <div class="grid md:grid-cols-4 gap-4 text-center">
-      <div class="kpi-card bg-emerald-50 p-6 rounded-2xl shadow">
-        <h4 class="font-bold text-xl mb-1">Inventory Change</h4>
-        <p class="text-emerald-600 text-3xl font-black kpi-number" data-target="-7">0</p>
-        <p class="text-sm text-slate-500">%</p>
-        <p class="text-slate-500 text-xs mt-1">Net reduction in overstock while balancing shortages</p>
-      </div>
-      <div class="kpi-card bg-blue-50 p-6 rounded-2xl shadow">
-        <h4 class="font-bold text-xl mb-1">Forecast Error</h4>
-        <p class="text-blue-600 text-3xl font-black kpi-number" data-target="22">0</p>
-        <p class="text-sm text-slate-500">%</p>
-        <p class="text-slate-500 text-xs mt-1">Deviation between predicted vs actual demand reduced</p>
-      </div>
-      <div class="kpi-card bg-yellow-50 p-6 rounded-2xl shadow">
-        <h4 class="font-bold text-xl mb-1">Decision Speed</h4>
-        <p class="text-yellow-600 text-3xl font-black kpi-number" data-target="15">0</p>
-        <p class="text-sm text-slate-500">%</p>
-        <p class="text-slate-500 text-xs mt-1">Faster, data-driven operational decisions</p>
-      </div>
-      <div class="kpi-card bg-purple-50 p-6 rounded-2xl shadow">
-        <h4 class="font-bold text-xl mb-1">Regions Optimized</h4>
-        <p class="text-purple-600 text-3xl font-black kpi-number" data-target="6">0</p>
-        <p class="text-slate-500 text-xs mt-1">Hamburg, Berlin, München, Köln, Frankfurt, Stuttgart</p>
-      </div>
-    </div>
+<!-- BACK TO PORTFOLIO -->
+<section class="max-w-6xl mx-auto px-6 mb-40 text-center">
+  <a href="../index.html" class="bg-emerald-600 px-8 py-4 rounded-full font-bold text-white hover:bg-emerald-700">Back to Portfolio</a>
+</section>
 
-    <!-- Charts -->
-    <div class="grid md:grid-cols-2 gap-6">
-      <div class="bg-white p-6 rounded-2xl shadow-lg">
-        <h3 class="text-xl font-bold mb-2">Forecast vs Actual Demand</h3>
-        <canvas id="evChart" height="220"></canvas>
-      </div>
-      <div class="bg-white p-6 rounded-2xl shadow-lg">
-        <h3 class="text-xl font-bold mb-2">Regional Inventory Levels</h3>
-        <canvas id="inventoryChart" height="220"></canvas>
-      </div>
-    </div>
-  </section>
-
-  <!-- Data Sources -->
-  <section class="bg-white p-6 rounded-2xl shadow-lg">
-    <h2 class="text-2xl font-bold mb-4">Data Sources</h2>
-    <ul class="list-disc list-inside space-y-2">
-      <li><a href="https://www.autoscout24.com/" target="_blank" class="data-link">AutoScout24 – Historical EV sales & listings</a></li>
-      <li><a href="https://www.zsw-bw.de/en/media-center/data-service.html" target="_blank" class="data-link">ZSW Electromobility – Regional EV registration trends</a></li>
-    </ul>
-  </section>
-
-</main>
-
+<!-- JS -->
 <script>
-// KPI animation
-function animateKPI(){
-  const counters = document.querySelectorAll('.kpi-number');
-  counters.forEach(counter=>{
-    const target = +counter.getAttribute('data-target');
-    let count = 0;
-    const increment = Math.abs(target)/50;
-    const isNegative = target < 0;
-    const interval = setInterval(()=>{
-      count += increment;
-      if(count >= Math.abs(target)){
-        counter.textContent = isNegative ? `-${Math.round(Math.abs(target))}` : Math.round(target);
-        clearInterval(interval);
-      } else counter.textContent = isNegative ? `-${Math.round(count)}` : Math.round(count);
-    },30);
-  });
-}
-animateKPI();
-
-// Forecast vs Actual
-const evCtx = document.getElementById('evChart').getContext('2d');
-new Chart(evCtx, {
-    type:'line',
-    data:{
-        labels:["Jan","Feb","Mar","Apr","May","Jun","Jul","Aug"],
-        datasets:[
-            {label:"Forecast", data:[120,150,180,240,300,360,400,420], borderColor:"rgb(34,197,94)", fill:false, tension:0.2},
-            {label:"Actual", data:[110,145,170,230,310,355,390,430], borderColor:"rgb(14,165,233)", fill:false, tension:0.2}
-        ]
-    },
-    options:{
-        responsive:true,
-        plugins:{legend:{position:'top'}, tooltip:{mode:'index', intersect:false}}
+// KPI Animation
+function animateValue(id, start, end, duration) {
+  let obj = document.getElementById(id);
+  let range = end - start;
+  let current = start;
+  let increment = range / (duration / 50);
+  let timer = setInterval(function() {
+    current += increment;
+    if ((increment > 0 && current >= end) || (increment < 0 && current <= end)) {
+      current = end;
+      clearInterval(timer);
     }
+    obj.textContent = Math.round(current) + (id==="decisionSpeed"?"%":"");
+  }, 50);
+}
+animateValue("invReduction", 0, 7, 1500);
+animateValue("forecastError", 0, 22, 1500);
+animateValue("decisionSpeed", 0, 15, 1500);
+
+// Forecast vs Actual Chart
+const ctxForecast = document.getElementById('forecastChart').getContext('2d');
+new Chart(ctxForecast, {
+  type: 'line',
+  data: {
+    labels: ["Jan","Feb","Mar","Apr","May","Jun","Jul","Aug"],
+    datasets: [
+      {label:"Forecast Demand", data:[120,150,180,240,300,360,400,420], borderColor:"rgb(34,197,94)", fill:false, tension:0.3},
+      {label:"Actual Demand", data:[110,145,170,230,310,355,390,430], borderColor:"rgb(14,165,233)", fill:false, tension:0.3}
+    ]
+  },
+  options: { responsive:true, plugins:{legend:{position:"top"}} }
 });
 
-// Regional Inventory
-const invCtx = document.getElementById('inventoryChart').getContext('2d');
-new Chart(invCtx, {
-    type:'bar',
-    data:{
-        labels:["Hamburg","Berlin","München","Köln","Frankfurt","Stuttgart"],
-        datasets:[
-            {label:"Before", data:[20,30,50,40,35,25], backgroundColor:"rgba(239,68,68,0.5)"},
-            {label:"After", data:[15,28,45,38,33,22], backgroundColor:"rgba(34,197,94,0.6)"}
-        ]
-    },
-    options:{
-        responsive:true,
-        plugins:{
-            legend:{position:'top'},
-            tooltip:{
-                callbacks:{
-                    label:function(context){
-                        const value = context.parsed.y;
-                        const before = context.datasetIndex === 0 ? value : context.chart.data.datasets[0].data[context.dataIndex];
-                        return `${context.dataset.label}: ${value} vehicles | Before: ${before}`;
-                    }
-                }
-            }
-        }
-    }
+// Regional Inventory Chart
+const ctxRegional = document.getElementById('regionalChart').getContext('2d');
+new Chart(ctxRegional, {
+  type: 'bar',
+  data: {
+    labels: ["Hamburg","Berlin","München","Köln","Frankfurt","Stuttgart"],
+    datasets:[
+      {label:"Before Optimization", data:[20,15,50,40,35,25], backgroundColor:"rgb(248,113,113)"},
+      {label:"After Optimization", data:[15,18,45,42,33,25], backgroundColor:"rgb(34,197,94)"}
+    ]
+  },
+  options:{ responsive:true, plugins:{legend:{position:"top"}}, scales:{y:{beginAtZero:true}} }
 });
 </script>
 
